fix socials align

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ footer a {
 
 .footer-social {
   display: flex;
+  align-items: center;
   gap: 20px;
 }
 
